--- a/config/poached_eggs.zmk.yml
+++ b/config/poached_eggs.zmk.yml
@@ -2,11 +2,11 @@ file_format: "1"
 id: poached_eggs
 name: Poached Eggs
 type: shield
-url: https://github.com/omwegg/poached-egg-shield-module
+url: https://example.com/
 requires: [seeed_xiao]
 features:
   - keys
-  - display
+  - studio
 siblings:
   - poached_eggs_left
   - poached_eggs_right
